# Tomato-Novel-Downloader

./: Cargo.toml
.github/workflows/: build-rust.yml
src/download/: plan.rs
src/network_parser/: network.rs
