[package]
name = "tomato-novel-downloader"
version = "1.0.3"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "native-tls"] }
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
anyhow = "1.0"
regex = "1.0"
md5 = "0.7"
config = "0.13"
indicatif = "0.17"
zip = "0.6"
encoding_rs = "0.8"
base64 = "0.21"
urlencoding = "2.1"
aes = "0.8"
cbc = "0.1"
block-modes = "0.9"
native-tls = "0.2"
tts = { version = "0.25", optional = true }
winrt = { version = "0.7", optional = true }
winapi = { version = "0.3", features = ["winuser"], optional = true }
registry = { version = "1.1", optional = true }
image = { version = "0.24", optional = true }
winres = { version = "0.1", optional = true }

[features]
default = ["tts-native"]
tts-native = ["dep:tts", "dep:winrt", "dep:winapi", "dep:registry"]
# 如果编译还报错，说明 build.rs 里硬编码了 winres，所以我们这里必须加上它
windows-icon = ["dep:winres"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
